fix: menu on mobile

--- a/style/master.less
+++ b/style/master.less
@@ -266,7 +266,6 @@ blockquote {
 
 .menu-dropdown select{
     width: 100%;
-    font-size: 30px;
 }
 
 /*---------------------------------------------------
